--- a/arsenic-lace/src/assets/scss/_settings.scss
+++ b/arsenic-lace/src/assets/scss/_settings.scss
@@ -337,7 +337,7 @@ $dropdown-sizes: (
 // -----------------
 
 $dropdownmenu-arrows: true;
-$dropdownmenu-arrow-color: $anchor-color;
+$dropdownmenu-arrow-color: $secondary-color;
 $dropdownmenu-min-width: 200px;
 $dropdownmenu-background: $white;
 $dropdownmenu-border: none;
