--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -289,22 +289,12 @@ cite {
 
 .callout {
     @include breakpoint(medium) {
-        position: relative;
-        right: 50%;
-        left: 50%;
-        /*         margin-right: -50vw;
         margin-left: -50vw;
-        padding-right: 16.66667%;
-        padding-left: 16.66667%; */
-
-        width: 100vw;
         margin-right: -50vw;
-        margin-left: -50vw;
-        padding-left: 50%;
-        padding-left: 50%;
+        padding-left: 50vw;
+        padding-right: 50vw;
     }
 }
-
 
 .callout-2 {
     @include breakpoint(large) {
@@ -327,6 +317,7 @@ cite {
 .main-content {
     margin-bottom: 3rem;
     padding: 0 1rem;
+    overflow: hidden; // prevent horizontal scroll bar
     /*     shape-outside: polygon(nonzero, 1009px 143px, 1034px 102px, 1031px 46px, 1068px 3px, 1080px -55px, 1166px -55px, 1152px -13px, 1192px 49px, 1175px 98px, 1193px 144px, 1190px 463px, 993px 463px); */
 }
 
