--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -31,19 +31,12 @@ h2 {
 }
 
 h1 {
-    color: $white;
+    color: $black;
 }
 
 h2 {
     margin-bottom: 1em;
-    color: ##b82e00;
-}
-
-h3 {
-    // color: $secondary-color;
-    /*     .callout & {
-    color: darken($secondary-color, 15%)
-    } */
+    color: #b82e00;
 }
 
 /*   small: 0,
@@ -72,11 +65,15 @@ h3 {
 
 
 [role='menuitem'] a {
-    color: $black;
+    color: #fff;
 }
 
 a {
     word-wrap: break-word;
+    font-weight: bold;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 // header
@@ -93,13 +90,8 @@ header {
     font-size: rem-calc(28);
     font-weight: $global-weight-bold;
     line-height: 1.1;
-
+color: $black;
     margin-top: 2rem;
-    /* margin-bottom: .5rem; */
-    /* padding: 0 2rem; */
-
-    color: $tertiary-color;
-    /* text-transform: uppercase; */
 }
 
 .program-title {
@@ -110,9 +102,8 @@ header {
 
     margin-top: 0;
     margin-bottom: .5em;
-    /* padding: 0 2rem; */
 
-    color: $secondary-color;
+    color: #b82e00;
 }
 
 .program-sponsor {
@@ -122,7 +113,6 @@ header {
 
     margin-top: 0;
     margin-bottom: .5em;
-    /* padding: 0 2rem; */
 }
 
 // nav
@@ -130,7 +120,7 @@ header {
 .nav-container {
     padding: 0 1.88235rem;
 
-    background-color: #dda845;
+    background-color: #005670;
     &.row {
         max-width: none;
     }
@@ -146,11 +136,6 @@ nav {
 }
 
 
-
-/*.is-dropdown-submenu {
-    display: none;
-}*/
-
 .menu > li {
     font-size: rem-calc(16);
 
@@ -163,9 +148,6 @@ nav {
     }
 }
 
-/*.primary-menu-items > li {
-    border-left: 1px solid #ddd;
-}*/
 
 // mjy 
 // via https://zurb.com/expo/lessons/how-to-re-create-top-bar-with-foundation-6 
@@ -186,17 +168,17 @@ nav {
     font-weight: $global-weight-normal;
 
     margin-top: 5em;
-    /*border-top: .3em solid #006268; */
+
     padding-top: 2em;
-    /* color: transparentize(255, 255, 255, .3); */
+
 
     color: transparentize(#fff, .2);
-    background-color: $tertiary-color;
+    background-color: #004f68;
     a {
         font-weight: 700;
 
         color: #fff;
-        /* text-decoration: underline; */
+
     }
 }
 
@@ -206,41 +188,27 @@ nav {
     margin: 1em 0 2em 0;
 }
 
-// end mjy
-
-/*#main-menu>li {
-    @include breakpoint(small only) { 
-      display: block;
-    }
-}*/
 
 // intro
 // ----------
 
-.intro/* , 
-.footer */ {
-    margin: 0 0 1rem 0;
-    // background: -moz-linear-gradient(top,  #7e9b47 0%, #657e39 50%, #52662e 100%); /* FF3.6-15 */
-    // background: -webkit-linear-gradient(top,  #7e9b47 0%,#657e39 50%,#52662e 100%); /* Chrome10-25,Safari5.1-6 */
-    // background: linear-gradient(to bottom,  #7e9b47 0%,#657e39 50%,#52662e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7e9b47', endColorstr='#52662e',GradientType=0 ); /* IE6-9 */
-    padding: 1rem 1rem 2rem 1rem;
-    // background-color: $primary-color;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7e9b47+0,657e39+50,52662e+100 */
+.intro {
+    margin: 0;
 
-    background: #657e39; /* Old browsers */
+    padding: 1rem 1rem 01rem;
+
+   /*  background: $light-gray; */ 
     h1 {
         line-height: 1.175;
 
-        text-shadow: rgba(0,0,0,.5) 1px 1px 1px;
+       /*  text-shadow: rgba(0,0,0,.5) 1px 1px 1px; */
     }
 }
 
 .lead {
     font-weight: 700;
 
-    color: $white;
-    // font-family: 'FF Tisa OT Italic';
+    color: color: #808080;
 }
 
 /* .main-content-body > p:first-of-type:first-letter { 
@@ -295,13 +263,15 @@ cite {
         margin-right: -50vw;
         padding-left: 50vw;
         padding-right: 50vw;
+        background-color: #f4ebd7;
+        color: #502920;
     }
 }
 
 .callout-2 {
     @include breakpoint(large) {
         font-size: 80%;
-
+color: $black;
         float: right;
 
         width: 50%;
@@ -310,7 +280,11 @@ cite {
         margin-bottom: 2em;
         padding: 2% 5%;
 
-        background-color: #ccc;
+        background-color: #8fb253;
+        /* border: 1px solid $light-gray; */
+        h4 {
+            color: #fff;
+        }
     }
 }
 
@@ -321,34 +295,4 @@ cite {
     margin-bottom: 3rem;
     padding: 0 1rem;
     overflow: hidden; // prevent horizontal scroll bar
-    /*     shape-outside: polygon(nonzero, 1009px 143px, 1034px 102px, 1031px 46px, 1068px 3px, 1080px -55px, 1166px -55px, 1152px -13px, 1192px 49px, 1175px 98px, 1193px 144px, 1190px 463px, 993px 463px); */
 }
-
-
-// calculate the percentage of container
-@function calc-percent($target, $container) {
-    @return ($target / $container) * 100%;
-}
-// shorthand
-@function cp($target, $container) {
-    @return calc-percent($target, $container);
-}
-
-/* .illustration {
-    float: right;
-
-    width: 18%;
-    margin: 30px 1em;
-        @media screen and (min-width: 640px) and (max-width: 1023px) {
-        margin-right: -12%;
-        width: 18%;
-    }
-
-    @media screen and (min-width: 1024px) {
-        margin-right: -25%;
-        width: 25%;
-    }
-   // filter: hue-rotate(20deg) ; 
-   // shape-outside: polygon(cp(21px, 168px) cp(201px, 534px), cp(58px, 168px) cp(157px, 534px), 45px 135px, 47px 84px, 86px 63px, 109px -5px, 258px -3px, 252px 545px, 44px 541px, 10px 513px);
-} */
-
