--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -208,7 +208,7 @@ nav {
 .lead {
     font-weight: 700;
 
-    color: color: #808080;
+    color: #808080;
 }
 
 /* .main-content-body > p:first-of-type:first-letter { 
