change callout background color

--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -263,7 +263,7 @@ cite {
         margin-right: -50vw;
         padding-left: 50vw;
         padding-right: 50vw;
-        background-color: #f4ebd7;
+        background-color: #f7f6e9;
     }
 }
 
