--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -197,7 +197,7 @@ nav {
 .intro {
     margin: 0;
 
-    padding: 1rem 1rem 01rem;
+    padding: 1rem 1rem 0 1rem;
 
    /*  background: $light-gray; */ 
     h1 {
