Added background color to dropdown
Although I selected the same color as the arrow, it shows up black. But
for now the menu items are visible.

--- a/arsenic-lace/src/assets/scss/_settings.scss
+++ b/arsenic-lace/src/assets/scss/_settings.scss
@@ -341,7 +341,7 @@ $dropdown-sizes: (
 $dropdownmenu-arrows: true;
 $dropdownmenu-arrow-color: #f4b643;
 $dropdownmenu-min-width: 200px;
-$dropdownmenu-background: $white;
+$dropdownmenu-background: #f4b643;
 $dropdownmenu-border: none;
 
 // 18. Flex Video
