Updated menu background colors at client request
I dislike these colors; requires designer review to select better
background colors.

--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -141,15 +141,22 @@ nav {
 }
 
 .menu ul {
-	background-color: #ece5d7;
+	//background-color: #ece5d7;
+	background-color: #219a47;
 }
 
 .menu ul.mjy-test {
-	background-color: #f4b643;
+	//background-color: #f4b643;
+	background-color: #a8d18d;
 }
 
 .menu ul.mjy-test2 {
-	background-color: #8fb253;
+	//background-color: #8fb253;
+	background-color: #3070c0;
+}
+
+.menu ul.mjy-test3 {
+	background-color: #717171;
 }
 
 
@@ -228,7 +235,7 @@ nav {
 
 .lead {
     font-weight: 700;
-    color: #7d7d7d;
+    color: #717171;
 }
 
 /* .main-content-body > p:first-of-type:first-letter { 
