Reset colors back to originals

--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -141,24 +141,9 @@ nav {
 }
 
 .menu ul {
-	//background-color: #ece5d7;
-	background-color: #219a47;
+	background-color: #ece5d7;
 }
-
-.menu ul.mjy-test {
-	//background-color: #f4b643;
-	background-color: #a8d18d;
-}
-
-.menu ul.mjy-test2 {
-	//background-color: #8fb253;
-	background-color: #3070c0;
-}
-
-.menu ul.mjy-test3 {
-	background-color: #717171;
-}
-
+ 
 
 .menu > li {
     font-size: rem-calc(16);
