--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -195,9 +195,9 @@ nav {
     }
 }
 
-.footer em {
-	word-spacing: -0.1em;
-}
+// .footer em {
+// 	word-spacing: -0.1em;
+// }
 
 .nih-logo {
     max-width: 320px;
