--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -353,9 +353,11 @@ figcaption {
     margin-right: 0;
 }
 
-.wide {
-    margin-right: -15%;
-    margin-left: -15%;
+@include breakpoint(medium) {
+    .wide {
+        margin-right: -15%;
+        margin-left: -15%;
+    }
 }
 
 // main content
