a little brighter yellow on menu items

--- a/arsenic-lace/src/assets/scss/components/arsenic.scss
+++ b/arsenic-lace/src/assets/scss/components/arsenic.scss
@@ -165,7 +165,7 @@ nav {
         text-align: left;
     }
     .menu a {
-        color: #f4b643;
+        color: #ffb833;
         &:hover {
             color: #fff;
         }
